fix: refine title styles for consistency and improved readability

--- a/src/styles/components/_title.css
+++ b/src/styles/components/_title.css
@@ -2,8 +2,11 @@
   display: flex;
   justify-content: end;
   font-size: var(--font-title-min);
+  font-family: var(--font-serif), serif;
   writing-mode: vertical-rl;
   transform: rotate(180deg);
+  font-weight: normal;
+  line-height: 1;
   color: var(--blue);
   position: relative;
   z-index: 1000;
